# background-process-manager

./: .gitignore  .mcp-run.example  CLAUDE.md  Cargo.toml  README.md  flake.nix
src/: builder.rs  config.rs  crash_handler.rs  log_buffer.rs  main.rs  mcp_server.rs  mode.rs  process.rs
src/tui/: app.rs  events.rs  mcp_client.rs  mod.rs  ui.rs
