[package]
name = "background-process-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "background-process-manager"
path = "src/main.rs"

[[bin]]
name = "bpm-tui"
path = "src/bin/tui.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
chrono = "0.4"
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = "0.1"
futures = "0.3"

# TUI dependencies
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }
